Source/WebKit/gtk: Removing document related events from DRT

[GTK] Don't log document events in DRT
https://bugs.webkit.org/show_bug.cgi?id=73746

Reviewed by Martin Robinson.

New unit test to check events when reloading a document. This
replaces the former document-reload-events.html layout test.

* tests/testatk.c:
(updateLoadingEventsResult): New, updates a global variable to
allow checking later on that the right signals were emmitted.
(documentLoadingEventCallback): New, global listener for load-complete
and reload signals over the document object (the web area).
(testWebkitAtkDocumentLoadingEvents): New unit test, globally
connects to document-related signals and check they are properly
emitted when reloading the web view.
(main): Added new test.

Tools: [GTK] Don't log document events in DRT
https://bugs.webkit.org/show_bug.cgi?id=73746

Reviewed by Martin Robinson.

Stop connecting globally to document-related events.

* DumpRenderTree/gtk/AccessibilityCallbacks.cpp:
(connectAccessibilityCallbacks): Removed connections.
(disconnectAccessibilityCallbacks): Removed disconnections.

LayoutTests: [GTK] Don't log document events in DRT
https://bugs.webkit.org/show_bug.cgi?id=73746

Reviewed by Martin Robinson.

Unskip passing test, remove other transformed into a unit test and
rebaseline expectations now we stopped logging document events.

* platform/gtk/Skipped: Removed two skipped tests.
* platform/gtk/accessibility/aria-slider-required-attributes-expected.txt: Rebaselined
* platform/gtk/accessibility/combo-box-collapsed-selection-changed-expected.txt: Ditto.
* platform/gtk/accessibility/document-reload-events-expected.txt: Removed.
* platform/gtk/accessibility/document-reload-events.html: Removed.

Canonical link: https://commits.webkit.org/90414@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@101951 268f45cc-cd09-0410-ab3c-d52691b4dbfc